--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,8 @@ body .wrapper .header .header-a-menu ul li a {
   font-size: 12px;
   font-style: normal;
   font-weight: 700;
-  line-height: 15px; /* 125% */
+  line-height: 15px;
+  /* 125% */
   letter-spacing: 0.923px;
   text-transform: uppercase;
   margin-left: -20px;
@@ -70,7 +71,8 @@ body .wrapper .section-img-menu .section-img-writing-menu .section-img-h1 {
   font-size: 72px;
   font-style: normal;
   font-weight: 900;
-  line-height: 72px; /* 100% */
+  line-height: 72px;
+  /* 100% */
 }
 body .wrapper .section-img-menu .section-img-writing-menu .section-img-p1 {
   max-width: 445px;
@@ -112,7 +114,8 @@ body .wrapper .section-coffee-ad .section-coffee-form1 .section-coffee-p1 {
   font-size: 24px;
   font-style: normal;
   font-weight: 900;
-  line-height: 32px; /* 133.333% */
+  line-height: 32px;
+  /* 133.333% */
 }
 body .wrapper .section-coffee-ad .section-coffee-form1 .section-coffee-p2 {
   width: 255px;
@@ -122,7 +125,8 @@ body .wrapper .section-coffee-ad .section-coffee-form1 .section-coffee-p2 {
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 26px; /* 162.5% */
+  line-height: 26px;
+  /* 162.5% */
 }
 body .wrapper .section-coffee-ad .section-coffee-form2 {
   width: 100%;
@@ -139,7 +143,8 @@ body .wrapper .section-coffee-ad .section-coffee-form2 .section-coffee-p3 {
   font-size: 24px;
   font-style: normal;
   font-weight: 900;
-  line-height: 32px; /* 133.333% */
+  line-height: 32px;
+  /* 133.333% */
 }
 body .wrapper .section-coffee-ad .section-coffee-form2 .section-coffee-p4 {
   width: 255px;
@@ -149,7 +154,8 @@ body .wrapper .section-coffee-ad .section-coffee-form2 .section-coffee-p4 {
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 26px; /* 162.5% */
+  line-height: 26px;
+  /* 162.5% */
 }
 body .wrapper .section-coffee-ad .section-coffee-form3 {
   width: 100%;
@@ -166,7 +172,8 @@ body .wrapper .section-coffee-ad .section-coffee-form3 .section-coffee-p5 {
   font-size: 24px;
   font-style: normal;
   font-weight: 900;
-  line-height: 32px; /* 133.333% */
+  line-height: 32px;
+  /* 133.333% */
 }
 body .wrapper .section-coffee-ad .section-coffee-form3 .section-coffee-p6 {
   width: 255px;
@@ -176,7 +183,8 @@ body .wrapper .section-coffee-ad .section-coffee-form3 .section-coffee-p6 {
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 26px; /* 162.5% */
+  line-height: 26px;
+  /* 162.5% */
 }
 body .wrapper .section-coffee-ad .section-coffee-form4 {
   width: 100%;
@@ -193,7 +201,8 @@ body .wrapper .section-coffee-ad .section-coffee-form4 .section-coffee-p7 {
   font-size: 24px;
   font-style: normal;
   font-weight: 900;
-  line-height: 32px; /* 133.333% */
+  line-height: 32px;
+  /* 133.333% */
 }
 body .wrapper .section-coffee-ad .section-coffee-form4 .section-coffee-p8 {
   width: 255px;
@@ -203,7 +212,8 @@ body .wrapper .section-coffee-ad .section-coffee-form4 .section-coffee-p8 {
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 26px; /* 162.5% */
+  line-height: 26px;
+  /* 162.5% */
 }
 body .wrapper .section-lower-part {
   margin: 0 auto;
@@ -239,7 +249,8 @@ body .wrapper .section-lower-part .section-lower-menu .section-lower-written-for
   font-size: 40px;
   font-style: normal;
   font-weight: 900;
-  line-height: 48px; /* 120% */
+  line-height: 48px;
+  /* 120% */
 }
 body .wrapper .section-lower-part .section-lower-menu .section-lower-written-form .written-form-p2 {
   color: #fefcf7;
@@ -248,7 +259,8 @@ body .wrapper .section-lower-part .section-lower-menu .section-lower-written-for
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 26px; /* 162.5% */
+  line-height: 26px;
+  /* 162.5% */
   opacity: 0.8;
 }
 body .wrapper .section-lower-part .lower-part-cards-form {
@@ -289,7 +301,8 @@ body .wrapper .section-lower-part .lower-part-cards-form .lower-part-card1 .lowe
   font-size: 24px;
   font-style: normal;
   font-weight: 900;
-  line-height: 32px; /* 133.333% */
+  line-height: 32px;
+  /* 133.333% */
 }
 body .wrapper .section-lower-part .lower-part-cards-form .lower-part-card1 .lower-part-card1-p2 {
   width: 100%;
@@ -300,7 +313,8 @@ body .wrapper .section-lower-part .lower-part-cards-form .lower-part-card1 .lowe
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 26px; /* 162.5% */
+  line-height: 26px;
+  /* 162.5% */
 }
 body .wrapper .section-lower-part .lower-part-cards-form .lower-part-card2 {
   width: 100%;
@@ -328,7 +342,8 @@ body .wrapper .section-lower-part .lower-part-cards-form .lower-part-card2 .lowe
   font-size: 24px;
   font-style: normal;
   font-weight: 900;
-  line-height: 32px; /* 133.333% */
+  line-height: 32px;
+  /* 133.333% */
 }
 body .wrapper .section-lower-part .lower-part-cards-form .lower-part-card2 .lower-part-card1-p4 {
   width: 100%;
@@ -339,7 +354,8 @@ body .wrapper .section-lower-part .lower-part-cards-form .lower-part-card2 .lowe
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 26px; /* 162.5% */
+  line-height: 26px;
+  /* 162.5% */
 }
 body .wrapper .section-lower-part .lower-part-cards-form .lower-part-card3 {
   width: 100%;
@@ -367,7 +383,8 @@ body .wrapper .section-lower-part .lower-part-cards-form .lower-part-card3 .lowe
   font-size: 24px;
   font-style: normal;
   font-weight: 900;
-  line-height: 32px; /* 133.333% */
+  line-height: 32px;
+  /* 133.333% */
 }
 body .wrapper .section-lower-part .lower-part-cards-form .lower-part-card3 .lower-part-card1-p6 {
   width: 100%;
@@ -378,7 +395,8 @@ body .wrapper .section-lower-part .lower-part-cards-form .lower-part-card3 .lowe
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 26px; /* 162.5% */
+  line-height: 26px;
+  /* 162.5% */
 }
 body .wrapper .bottom-sec {
   margin: 0 auto;
@@ -394,7 +412,8 @@ body .wrapper .bottom-sec .bottom-sec-p1 {
   font-size: 24px;
   font-style: normal;
   font-weight: 900;
-  line-height: 32px; /* 133.333% */
+  line-height: 32px;
+  /* 133.333% */
 }
 body .wrapper .bottom-sec .botton-sec-wert-menu {
   display: flex;
@@ -443,7 +462,8 @@ body .wrapper .wert-menu-cards .wert-menu-card1 .wert-menu-card1-p1 {
   font-size: 72px;
   font-style: normal;
   font-weight: 900;
-  line-height: 72px; /* 100% */
+  line-height: 72px;
+  /* 100% */
   margin-top: -10px;
 }
 body .wrapper .wert-menu-cards .wert-menu-card1 .wert-menu-card1-p2 {
@@ -453,7 +473,8 @@ body .wrapper .wert-menu-cards .wert-menu-card1 .wert-menu-card1-p2 {
   font-size: 32px;
   font-style: normal;
   font-weight: 900;
-  line-height: 36px; /* 112.5% */
+  line-height: 36px;
+  /* 112.5% */
 }
 body .wrapper .wert-menu-cards .wert-menu-card1 .wert-menu-card1-p3 {
   width: 285px;
@@ -462,7 +483,8 @@ body .wrapper .wert-menu-cards .wert-menu-card1 .wert-menu-card1-p3 {
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 26px; /* 162.5% */
+  line-height: 26px;
+  /* 162.5% */
 }
 body .wrapper .wert-menu-cards .wert-menu-card2 {
   max-width: 285px;
@@ -475,7 +497,8 @@ body .wrapper .wert-menu-cards .wert-menu-card2 .wert-menu-card2-p1 {
   font-size: 72px;
   font-style: normal;
   font-weight: 900;
-  line-height: 72px; /* 100% */
+  line-height: 72px;
+  /* 100% */
   margin-top: -10px;
 }
 body .wrapper .wert-menu-cards .wert-menu-card2 .wert-menu-card2-p2 {
@@ -484,7 +507,8 @@ body .wrapper .wert-menu-cards .wert-menu-card2 .wert-menu-card2-p2 {
   font-size: 32px;
   font-style: normal;
   font-weight: 900;
-  line-height: 36px; /* 112.5% */
+  line-height: 36px;
+  /* 112.5% */
 }
 body .wrapper .wert-menu-cards .wert-menu-card2 .wert-menu-card2-p3 {
   width: 285px;
@@ -493,7 +517,8 @@ body .wrapper .wert-menu-cards .wert-menu-card2 .wert-menu-card2-p3 {
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 26px; /* 162.5% */
+  line-height: 26px;
+  /* 162.5% */
 }
 body .wrapper .wert-menu-cards .wert-menu-card3 {
   max-width: 285px;
@@ -506,7 +531,8 @@ body .wrapper .wert-menu-cards .wert-menu-card3 .wert-menu-card3-p1 {
   font-size: 72px;
   font-style: normal;
   font-weight: 900;
-  line-height: 72px; /* 100% */
+  line-height: 72px;
+  /* 100% */
   margin-top: -10px;
 }
 body .wrapper .wert-menu-cards .wert-menu-card3 .wert-menu-card3-p2 {
@@ -515,7 +541,8 @@ body .wrapper .wert-menu-cards .wert-menu-card3 .wert-menu-card3-p2 {
   font-size: 32px;
   font-style: normal;
   font-weight: 900;
-  line-height: 36px; /* 112.5% */
+  line-height: 36px;
+  /* 112.5% */
 }
 body .wrapper .wert-menu-cards .wert-menu-card3 .wert-menu-card3-p3 {
   width: 285px;
@@ -524,7 +551,8 @@ body .wrapper .wert-menu-cards .wert-menu-card3 .wert-menu-card3-p3 {
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 26px; /* 162.5% */
+  line-height: 26px;
+  /* 162.5% */
 }
 body .wrapper .sec-buttom {
   width: 217px;
@@ -537,7 +565,64 @@ body .wrapper .sec-buttom {
   font-size: 18px;
   font-style: normal;
   font-weight: 900;
-  line-height: 25px; /* 138.889% */
+  line-height: 25px;
+  /* 138.889% */
   border: 0;
   margin-left: 116px;
+}
+body .wrapper footer {
+  width: 100%;
+  max-width: 1280px;
+  height: 208px;
+  margin-top: 200px;
+  display: flex;
+  align-items: center;
+}
+body .wrapper footer nav {
+  width: 100%;
+  max-width: 1280px;
+  height: 120px;
+  padding: 47px 85px 39px 85px;
+  background: #2C343E;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+body .wrapper footer nav .navigation-footer {
+  margin-left: -120px;
+}
+body .wrapper footer nav .navigation-footer ul {
+  display: flex;
+}
+body .wrapper footer nav .navigation-footer ul li {
+  display: flex;
+  margin-right: 33px;
+}
+body .wrapper footer nav .navigation-footer ul li a {
+  color: #83888F;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: 0.92px;
+  font-family: "Barlow", sans-serif;
+}
+body .wrapper footer nav .navigation-footer ul li a:hover {
+  transition: 0.1s;
+  color: #FEFCF7;
+}
+body .wrapper footer nav .navigation-footer ul li:nth-child(2) {
+  margin-right: 32px;
+}
+body .wrapper footer nav .navigation-footer ul li:nth-child(3) {
+  margin-right: 0;
+}
+body .wrapper footer nav .icons .icon-style {
+  color: #FEFCF7;
+  font-size: 19.5px;
+  margin-left: 19px;
+}
+body .wrapper footer nav .icons .icon-style:hover {
+  transition: 0.5s;
+  color: #FDD6BA;
 }/*# sourceMappingURL=style.css.map */
