--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&family=Fraunces:opsz,wght@9..144,900&display=swap");
+
 body {
   display: flex;
   justify-content: center;
@@ -10,6 +11,7 @@ body {
     max-width: 1280px;
     height: 3595px;
     background: #fefcf7;
+
     .header {
       display: flex;
       justify-content: space-between;
@@ -18,17 +20,21 @@ body {
       padding-bottom: 49px;
       background-color: transparent;
       margin: 0 auto;
+
       .header-a-menu {
         width: 323px;
         height: 15px;
         background-color: transparent;
         margin-top: 7.5px;
+
         ul {
           display: flex;
           column-gap: 33px;
           margin-top: -3px;
+
           li {
             list-style: none;
+
             a {
               text-decoration: none;
               color: #83888f;
@@ -36,7 +42,8 @@ body {
               font-size: 12px;
               font-style: normal;
               font-weight: 700;
-              line-height: 15px; /* 125% */
+              line-height: 15px;
+              /* 125% */
               letter-spacing: 0.923px;
               text-transform: uppercase;
               margin-left: -20px;
@@ -45,15 +52,18 @@ body {
         }
       }
     }
+
     .section-img-menu {
       display: flex;
       justify-content: center;
       margin: 0 auto;
       background-color: rgb(192, 192, 101);
+
       .section-img {
         width: 100%;
         max-width: 1279px;
       }
+
       .section-img-writing-menu {
         width: 100%;
         max-width: 493px;
@@ -67,8 +77,10 @@ body {
           font-size: 72px;
           font-style: normal;
           font-weight: 900;
-          line-height: 72px; /* 100% */
+          line-height: 72px;
+          /* 100% */
         }
+
         .section-img-p1 {
           max-width: 445px;
           color: #fefcf7;
@@ -81,6 +93,7 @@ body {
         }
       }
     }
+
     .section-coffee-ad {
       display: flex;
       flex-wrap: wrap;
@@ -91,16 +104,19 @@ body {
       height: 525px;
       background-color: transparent;
       margin-top: 136px;
+
       .section-coffee-img {
         width: 100%;
         max-width: 1111px;
       }
+
       .section-coffee-form1 {
         width: 100%;
         max-width: 255px;
         height: 398.55px;
         background-color: transparent;
         margin-top: -68px;
+
         .section-coffee-p1 {
           width: 255px;
           color: #333d4b;
@@ -109,8 +125,10 @@ body {
           font-size: 24px;
           font-style: normal;
           font-weight: 900;
-          line-height: 32px; /* 133.333% */
+          line-height: 32px;
+          /* 133.333% */
         }
+
         .section-coffee-p2 {
           width: 255px;
           color: #333d4b;
@@ -119,15 +137,18 @@ body {
           font-size: 16px;
           font-style: normal;
           font-weight: 400;
-          line-height: 26px; /* 162.5% */
+          line-height: 26px;
+          /* 162.5% */
         }
       }
+
       .section-coffee-form2 {
         width: 100%;
         max-width: 255px;
         height: 398.55px;
         background-color: transparent;
         margin-top: -68px;
+
         .section-coffee-p3 {
           width: 255px;
           color: #333d4b;
@@ -136,8 +157,10 @@ body {
           font-size: 24px;
           font-style: normal;
           font-weight: 900;
-          line-height: 32px; /* 133.333% */
+          line-height: 32px;
+          /* 133.333% */
         }
+
         .section-coffee-p4 {
           width: 255px;
           color: #333d4b;
@@ -146,15 +169,18 @@ body {
           font-size: 16px;
           font-style: normal;
           font-weight: 400;
-          line-height: 26px; /* 162.5% */
+          line-height: 26px;
+          /* 162.5% */
         }
       }
+
       .section-coffee-form3 {
         width: 100%;
         max-width: 255px;
         height: 398.55px;
         background-color: transparent;
         margin-top: -68px;
+
         .section-coffee-p5 {
           width: 255px;
           color: #333d4b;
@@ -163,8 +189,10 @@ body {
           font-size: 24px;
           font-style: normal;
           font-weight: 900;
-          line-height: 32px; /* 133.333% */
+          line-height: 32px;
+          /* 133.333% */
         }
+
         .section-coffee-p6 {
           width: 255px;
           color: #333d4b;
@@ -173,15 +201,18 @@ body {
           font-size: 16px;
           font-style: normal;
           font-weight: 400;
-          line-height: 26px; /* 162.5% */
+          line-height: 26px;
+          /* 162.5% */
         }
       }
+
       .section-coffee-form4 {
         width: 100%;
         max-width: 255px;
         height: 398.55px;
         background-color: transparent;
         margin-top: -68px;
+
         .section-coffee-p7 {
           width: 255px;
           color: #333d4b;
@@ -190,8 +221,10 @@ body {
           font-size: 24px;
           font-style: normal;
           font-weight: 900;
-          line-height: 32px; /* 133.333% */
+          line-height: 32px;
+          /* 133.333% */
         }
+
         .section-coffee-p8 {
           width: 255px;
           color: #333d4b;
@@ -200,10 +233,12 @@ body {
           font-size: 16px;
           font-style: normal;
           font-weight: 400;
-          line-height: 26px; /* 162.5% */
+          line-height: 26px;
+          /* 162.5% */
         }
       }
     }
+
     .section-lower-part {
       margin: 0 auto;
       width: 100%;
@@ -211,6 +246,7 @@ body {
       height: 728px;
       background-color: transparent;
       margin-top: 188px;
+
       .section-lower-menu {
         display: flex;
         justify-content: center;
@@ -219,12 +255,14 @@ body {
         height: 577px;
         background-color: #2c343e;
         border-radius: 5px;
+
         .section-lower-written-form {
           width: 100%;
           max-width: 540px;
           height: 160px;
           background-color: transparent;
           margin-top: 112px;
+
           .written-form-p1 {
             margin-top: -5px;
             display: flex;
@@ -236,8 +274,10 @@ body {
             font-size: 40px;
             font-style: normal;
             font-weight: 900;
-            line-height: 48px; /* 120% */
+            line-height: 48px;
+            /* 120% */
           }
+
           .written-form-p2 {
             color: #fefcf7;
             text-align: center;
@@ -245,11 +285,13 @@ body {
             font-size: 16px;
             font-style: normal;
             font-weight: 400;
-            line-height: 26px; /* 162.5% */
+            line-height: 26px;
+            /* 162.5% */
             opacity: 0.8;
           }
         }
       }
+
       .lower-part-cards-form {
         display: flex;
         justify-content: space-between;
@@ -261,18 +303,21 @@ body {
         background: transparent;
         margin: 0 auto;
         margin-top: -230px;
+
         .lower-part-card1 {
           width: 100%;
           max-width: 350px;
           height: 382px;
           border-radius: 8px;
           background: #0e8784;
+
           .coffee-img-form {
             margin: 0 auto;
             padding-top: 72px;
             width: 100%;
             max-width: 73px;
             background-color: transparent;
+
             .lower-part-img {
               width: 100%;
               max-width: 73px;
@@ -281,6 +326,7 @@ body {
               //   margin-left: 135.5px;
             }
           }
+
           .lower-part-card1-p1 {
             color: #fefcf7;
             text-align: center;
@@ -288,8 +334,10 @@ body {
             font-size: 24px;
             font-style: normal;
             font-weight: 900;
-            line-height: 32px; /* 133.333% */
+            line-height: 32px;
+            /* 133.333% */
           }
+
           .lower-part-card1-p2 {
             width: 100%;
             max-width: 355px;
@@ -299,21 +347,25 @@ body {
             font-size: 16px;
             font-style: normal;
             font-weight: 400;
-            line-height: 26px; /* 162.5% */
+            line-height: 26px;
+            /* 162.5% */
           }
         }
+
         .lower-part-card2 {
           width: 100%;
           max-width: 350px;
           height: 382px;
           border-radius: 8px;
           background: #0e8784;
+
           .coffee-img-form2 {
             margin: 0 auto;
             padding-top: 72px;
             width: 100%;
             max-width: 73px;
             background-color: transparent;
+
             .lower-part-img2 {
               width: 100%;
               max-width: 73px;
@@ -322,6 +374,7 @@ body {
               //   margin-left: 135.5px;
             }
           }
+
           .lower-part-card1-p3 {
             color: #fefcf7;
             text-align: center;
@@ -329,8 +382,10 @@ body {
             font-size: 24px;
             font-style: normal;
             font-weight: 900;
-            line-height: 32px; /* 133.333% */
+            line-height: 32px;
+            /* 133.333% */
           }
+
           .lower-part-card1-p4 {
             width: 100%;
             max-width: 355px;
@@ -340,21 +395,25 @@ body {
             font-size: 16px;
             font-style: normal;
             font-weight: 400;
-            line-height: 26px; /* 162.5% */
+            line-height: 26px;
+            /* 162.5% */
           }
         }
+
         .lower-part-card3 {
           width: 100%;
           max-width: 350px;
           height: 382px;
           border-radius: 8px;
           background: #0e8784;
+
           .coffee-img-form3 {
             margin: 0 auto;
             padding-top: 72px;
             width: 100%;
             max-width: 73px;
             background-color: transparent;
+
             .lower-part-img3 {
               width: 100%;
               max-width: 73px;
@@ -363,6 +422,7 @@ body {
               //   margin-left: 135.5px;
             }
           }
+
           .lower-part-card1-p5 {
             color: #fefcf7;
             text-align: center;
@@ -370,8 +430,10 @@ body {
             font-size: 24px;
             font-style: normal;
             font-weight: 900;
-            line-height: 32px; /* 133.333% */
+            line-height: 32px;
+            /* 133.333% */
           }
+
           .lower-part-card1-p6 {
             width: 100%;
             max-width: 355px;
@@ -381,17 +443,20 @@ body {
             font-size: 16px;
             font-style: normal;
             font-weight: 400;
-            line-height: 26px; /* 162.5% */
+            line-height: 26px;
+            /* 162.5% */
           }
         }
       }
     }
+
     .bottom-sec {
       margin: 0 auto;
       max-width: 1045px;
       height: 565px;
       background: transparent;
       margin-top: 200px;
+
       .bottom-sec-p1 {
         width: 255px;
         color: #83888f;
@@ -399,8 +464,10 @@ body {
         font-size: 24px;
         font-style: normal;
         font-weight: 900;
-        line-height: 32px; /* 133.333% */
+        line-height: 32px;
+        /* 133.333% */
       }
+
       .botton-sec-wert-menu {
         display: flex;
         align-items: center;
@@ -409,18 +476,21 @@ body {
         height: 31px;
         background-color: transparent;
         margin-top: 50px;
+
         .wert-menu-img-card3 {
           // margin-left: 200px;
           display: flex;
           justify-content: center;
           transform: translateX(667px);
         }
+
         .wert-menu-img-card2 {
           // margin-left: 200px;
           display: flex;
           justify-content: center;
           transform: translateX(320px);
         }
+
         .wert-menu-img {
           width: 100%;
           max-width: 760px;
@@ -430,6 +500,7 @@ body {
         }
       }
     }
+
     .wert-menu-cards {
       display: flex;
       justify-content: space-between;
@@ -439,19 +510,23 @@ body {
       height: 355px;
       background-color: transparent;
       margin-top: 67px;
+
       .wert-menu-card1 {
         max-width: 285px;
         height: 355px;
         background-color: transparent;
+
         .wert-menu-card1-p1 {
           color: #fdd6ba;
           font-family: Fraunces 9pt;
           font-size: 72px;
           font-style: normal;
           font-weight: 900;
-          line-height: 72px; /* 100% */
+          line-height: 72px;
+          /* 100% */
           margin-top: -10px;
         }
+
         .wert-menu-card1-p2 {
           width: 255px;
           color: #333d4b;
@@ -459,9 +534,11 @@ body {
           font-size: 32px;
           font-style: normal;
           font-weight: 900;
-          line-height: 36px; /* 112.5% */
+          line-height: 36px;
+          /* 112.5% */
           //   margin-top: -30px;
         }
+
         .wert-menu-card1-p3 {
           width: 285px;
           color: #333d4b;
@@ -469,22 +546,27 @@ body {
           font-size: 16px;
           font-style: normal;
           font-weight: 400;
-          line-height: 26px; /* 162.5% */
+          line-height: 26px;
+          /* 162.5% */
         }
       }
+
       .wert-menu-card2 {
         max-width: 285px;
         height: 355px;
         background-color: transparent;
+
         .wert-menu-card2-p1 {
           color: #fdd6ba;
           font-family: Fraunces 9pt;
           font-size: 72px;
           font-style: normal;
           font-weight: 900;
-          line-height: 72px; /* 100% */
+          line-height: 72px;
+          /* 100% */
           margin-top: -10px;
         }
+
         .wert-menu-card2-p2 {
           //   width: 255px;
           color: #333d4b;
@@ -492,9 +574,11 @@ body {
           font-size: 32px;
           font-style: normal;
           font-weight: 900;
-          line-height: 36px; /* 112.5% */
+          line-height: 36px;
+          /* 112.5% */
           //   margin-top: -30px;
         }
+
         .wert-menu-card2-p3 {
           width: 285px;
           color: #333d4b;
@@ -502,22 +586,27 @@ body {
           font-size: 16px;
           font-style: normal;
           font-weight: 400;
-          line-height: 26px; /* 162.5% */
+          line-height: 26px;
+          /* 162.5% */
         }
       }
+
       .wert-menu-card3 {
         max-width: 285px;
         height: 355px;
         background-color: transparent;
+
         .wert-menu-card3-p1 {
           color: #fdd6ba;
           font-family: Fraunces 9pt;
           font-size: 72px;
           font-style: normal;
           font-weight: 900;
-          line-height: 72px; /* 100% */
+          line-height: 72px;
+          /* 100% */
           margin-top: -10px;
         }
+
         .wert-menu-card3-p2 {
           //   width: 255px;
           color: #333d4b;
@@ -525,9 +614,11 @@ body {
           font-size: 32px;
           font-style: normal;
           font-weight: 900;
-          line-height: 36px; /* 112.5% */
+          line-height: 36px;
+          /* 112.5% */
           //   margin-top: -30px;
         }
+
         .wert-menu-card3-p3 {
           width: 285px;
           color: #333d4b;
@@ -535,10 +626,12 @@ body {
           font-size: 16px;
           font-style: normal;
           font-weight: 400;
-          line-height: 26px; /* 162.5% */
+          line-height: 26px;
+          /* 162.5% */
         }
       }
     }
+
     .sec-buttom {
       width: 217px;
       height: 56px;
@@ -550,9 +643,85 @@ body {
       font-size: 18px;
       font-style: normal;
       font-weight: 900;
-      line-height: 25px; /* 138.889% */
+      line-height: 25px;
+      /* 138.889% */
       border: 0;
       margin-left: 116px;
+    }
+
+    footer {
+      width: 100%;
+      max-width: 1280px;
+      height: 208px;
+
+      margin-top: 200px;
+
+      display: flex;
+      align-items: center;
+
+      nav {
+        width: 100%;
+        max-width: 1280px;
+        height: 120px;
+
+        padding: 47px 85px 39px 85px;
+        background: #2C343E;
+
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .navigation-footer {
+          margin-left: -120px;
+
+          ul {
+            display: flex;
+
+            li {
+              display: flex;
+              margin-right: 33px;
+
+              a {
+                color: #83888F;
+                text-decoration: none;
+                font-weight: 700;
+                font-size: 12px;
+                line-height: 15px;
+                letter-spacing: 0.92px;
+
+                font-family: 'Barlow', sans-serif;
+              }
+
+              a:hover {
+                transition: 0.1s;
+                color: #FEFCF7;
+              }
+            }
+
+            li:nth-child(2) {
+              margin-right: 32px;
+            }
+
+            li:nth-child(3) {
+              margin-right: 0;
+            }
+          }
+        }
+
+        .icons {
+          .icon-style {
+            color: #FEFCF7;
+            font-size: 19.5px;
+
+            margin-left: 19px;
+
+            &:hover {
+              transition: 0.5s;
+              color: #FDD6BA;
+            }
+          }
+        }
+      }
     }
   }
 }
