--- a/css/about.css
+++ b/css/about.css
@@ -58,7 +58,19 @@ body .wrapper-about .header-img-menu {
   background-color: rgb(75, 116, 116);
   background-image: url(../img/about-img-menu.svg);
 }
-body .wrapper-about .header-img-menu .header-img-menu-p {
+body .wrapper-about .header-img-menu .header-img-menu-p1 {
+  width: 445px;
+  color: #FEFCF7;
+  font-family: Fraunces 9pt;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 48px;
+  /* 120% */
+  padding-top: 170px;
+  margin-left: 85px;
+}
+body .wrapper-about .header-img-menu .header-img-menu-p2 {
   width: 445px;
   color: #FEFCF7;
   font-family: Barlow;
@@ -67,22 +79,49 @@ body .wrapper-about .header-img-menu .header-img-menu-p {
   font-weight: 400;
   line-height: 26px;
   /* 162.5% */
-  padding-top: 209px;
   margin-left: 85px;
 }
-body .wrapper-about .about-writing-p1 {
-  color: #fefcf7;
+body .wrapper-about .section {
+  display: flex;
+  justify-content: center;
+  max-width: 1280px;
+  height: 520px;
+  background-color: transparent;
+}
+body .wrapper-about .section .about-section-menu {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1110px;
+  height: 520px;
+  background-color: transparent;
+  margin-top: 168px;
+}
+body .wrapper-about .section .about-section-menu .about-section-menu-p-menu {
+  width: 100%;
+  max-width: 540px;
+  height: 340px;
+  background-color: transparent;
+  margin-top: 90px;
+}
+body .wrapper-about .section .about-section-menu .about-section-menu-p-menu .about-section-menu-p1 {
+  color: #333D4B;
   font-family: Fraunces 9pt;
   font-size: 40px;
   font-style: normal;
   font-weight: 900;
   line-height: 48px;
   /* 120% */
-  margin-top: -310px;
-  margin-left: 85px;
 }
-body .wrapper-about .section-menu {
-  max-width: 1110px;
-  height: 520px;
-  background-color: #887c7c;
+body .wrapper-about .section .about-section-menu .about-section-menu-p-menu .about-section-menu-p2 {
+  max-width: 540px;
+  color: #333D4B;
+  font-family: Barlow;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+  /* 162.5% */
+  opacity: 0.8;
+  margin-top: 32px;
 }/*# sourceMappingURL=about.css.map */
