--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,9 @@
 body {
   display: flex;
   justify-content: center;
-  background-color: #212121;
+  background-color: #FEFCF7;
   font-family: "Fraunces", serif;
+  font-family: "Barlow", sans-serif;
 }
 body .contener {
   display: flex;
@@ -658,7 +659,7 @@ body .contener .wrapper footer nav .icons .icon-style:hover {
   body {
     display: flex;
     justify-content: center;
-    background-color: #212121;
+    background-color: #FEFCF7;
   }
   body .contener {
     display: flex;
@@ -714,7 +715,7 @@ body .contener .wrapper footer nav .icons .icon-style:hover {
     display: flex;
     justify-content: center;
     margin: 0 auto;
-    background-color: rgb(192, 192, 101);
+    background-color: transparent;
   }
   body .contener .wrapper .section-img-menu .section-img {
     width: 100%;
@@ -755,7 +756,7 @@ body .contener .wrapper footer nav .icons .icon-style:hover {
     width: 100%;
     max-width: 1111px;
     height: 525px;
-    background-color: blue;
+    background-color: transparent;
     margin-top: 136px;
   }
   body .contener .wrapper .section-coffee-ad .section-coffee-img {
@@ -766,7 +767,7 @@ body .contener .wrapper footer nav .icons .icon-style:hover {
     width: 100%;
     max-width: 255px;
     height: 398.55px;
-    background-color: red;
+    background-color: transparent;
     margin-top: -68px;
   }
   body .contener .wrapper .section-coffee-ad .section-coffee-form1 .section-coffee-p1 {
