--- a/css/subscribe.css
+++ b/css/subscribe.css
@@ -9,8 +9,9 @@
 body {
   display: flex;
   justify-content: center;
-  background-color: #212121;
+  background-color: #FEFCF7;
   font-family: "Fraunces", serif;
+  font-family: "Barlow", sans-serif;
 }
 body .contener-about {
   display: flex;
