--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,8 +4,9 @@
 body {
   display: flex;
   justify-content: center;
-  background-color: #212121;
+  background-color: #FEFCF7;
   font-family: 'Fraunces', serif;
+  font-family: 'Barlow', sans-serif;
 
   .contener {
 
@@ -764,7 +765,7 @@ body {
   body {
     display: flex;
     justify-content: center;
-    background-color: #212121;
+    background-color: #FEFCF7;
 
     .contener {
 
@@ -825,7 +826,7 @@ body {
           display: flex;
           justify-content: center;
           margin: 0 auto;
-          background-color: rgb(192, 192, 101);
+          background-color: transparent;
 
           .section-img {
             width: 100%;
@@ -871,7 +872,7 @@ body {
           width: 100%;
           max-width: 1111px;
           height: 525px;
-          background-color: blue;
+          background-color: transparent;
           margin-top: 136px;
 
           .section-coffee-img {
@@ -883,7 +884,7 @@ body {
             width: 100%;
             max-width: 255px;
             height: 398.55px;
-            background-color: red;
+            background-color: transparent;
             margin-top: -68px;
 
             .section-coffee-p1 {
