--- a/scss/subscribe.scss
+++ b/scss/subscribe.scss
@@ -10,8 +10,9 @@
 body {
     display: flex;
     justify-content: center;
-    background-color: #212121;
+    background-color: #FEFCF7;
     font-family: 'Fraunces', serif;
+    font-family: 'Barlow', sans-serif;
 
     .contener-about {
         display: flex;
