--- a/css/subscribe.css
+++ b/css/subscribe.css
@@ -62,6 +62,17 @@ body .contener-about .wrapper-about .header-about .header-a-menu-about ul li a {
   text-transform: uppercase;
   margin-left: -20px;
 }
+body .contener-about .wrapper-about .header-about .header-a-menu-about ul li a:hover {
+  color: #333D4B;
+  font-family: Barlow;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 15px;
+  /* 125% */
+  letter-spacing: 0.923px;
+  text-transform: uppercase;
+}
 body .contener-about .wrapper-about .header-img-menu {
   max-width: 1280px;
   height: 450px;
@@ -319,7 +330,8 @@ body .contener-about .wrapper-about .information-coffee .information-coffee-p-me
   font-size: 24px;
   font-style: normal;
   font-weight: 900;
-  line-height: 32px; /* 133.333% */
+  line-height: 32px;
+  /* 133.333% */
   /* 133.333% */
 }
 body .contener-about .wrapper-about .information-coffee .information-coffee-p-menu .information-coffee-ps2 .information-coffee-p4 {
@@ -328,7 +340,8 @@ body .contener-about .wrapper-about .information-coffee .information-coffee-p-me
   font-size: 24px;
   font-style: normal;
   font-weight: 400;
-  line-height: 32px; /* 120% */
+  line-height: 32px;
+  /* 120% */
   /* 133.333% */
 }
 body .contener-about .wrapper-about .information-coffee .information-coffee-p-menu .information-line-img1 {
@@ -350,7 +363,8 @@ body .contener-about .wrapper-about .information-coffee .information-coffee-p-me
   font-size: 24px;
   font-style: normal;
   font-weight: 900;
-  line-height: 32px; /* 133.333% */
+  line-height: 32px;
+  /* 133.333% */
   /* 133.333% */
 }
 body .contener-about .wrapper-about .information-coffee .information-coffee-p-menu .information-coffee-ps3 .information-coffee-p6 {
@@ -359,7 +373,8 @@ body .contener-about .wrapper-about .information-coffee .information-coffee-p-me
   font-size: 24px;
   font-style: normal;
   font-weight: 900;
-  line-height: 32px; /* 133.333% */
+  line-height: 32px;
+  /* 133.333% */
   /* 133.333% */
 }
 body .contener-about .wrapper-about .information-coffee .information-coffee-p-menu .information-coffee-ps4 {
@@ -742,7 +757,17 @@ body .contener-about .wrapper-about footer nav .navigation-footer ul li a {
   font-size: 12px;
   line-height: 15px;
   letter-spacing: 0.92px;
-  font-family: "Barlow", sans-serif;
+}
+body .contener-about .wrapper-about footer nav .navigation-footer ul li a:hover {
+  color: #FEFCF7;
+  font-family: Barlow;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 15px;
+  /* 125% */
+  letter-spacing: 0.923px;
+  text-transform: uppercase;
 }
 body .contener-about .wrapper-about footer nav .navigation-footer ul li a:hover {
   transition: 0.1s;
