--- a/scss/about.scss
+++ b/scss/about.scss
@@ -63,6 +63,17 @@ body {
                 letter-spacing: 0.923px;
                 text-transform: uppercase;
                 margin-left: -20px;
+                &:hover {
+                  color: #333D4B;
+                  font-family: Barlow;
+                  font-size: 12px;
+                  font-style: normal;
+                  font-weight: 700;
+                  line-height: 15px;
+                  /* 125% */
+                  letter-spacing: 0.923px;
+                  text-transform: uppercase;
+                }
               }
             }
           }
@@ -378,7 +389,17 @@ body {
                     line-height: 15px;
                     letter-spacing: 0.92px;
 
-                    font-family: 'Barlow', sans-serif;
+                    &:hover {
+                      color: #FEFCF7;
+                      font-family: Barlow;
+                      font-size: 12px;
+                      font-style: normal;
+                      font-weight: 700;
+                      line-height: 15px;
+                      /* 125% */
+                      letter-spacing: 0.923px;
+                      text-transform: uppercase;
+                  }
                   }
 
                   .icons {
